<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_requirements_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:gravity="center"
        android:text="@string/title_requirements"
        android:textSize="@dimen/default_headlines_text"
        android:textStyle="bold">

    </TextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/our_requirements_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:gravity="start"
        android:text="@string/text_requirements"
        android:textSize="@dimen/default_text">

    </androidx.appcompat.widget.AppCompatTextView>

    <LinearLayout
        android:id="@+id/optional_benefits_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_optional_benefits_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:gravity="start"
            android:text="@string/title_optional_benefits"
            android:textSize="@dimen/default_subtitle_text"
            android:textStyle="bold">

        </TextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/optional_benefits_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:gravity="start"
            android:text="@string/text_optional_benefits"
            android:textSize="@dimen/default_text">

        </androidx.appcompat.widget.AppCompatTextView>
    </LinearLayout>
</LinearLayout>