<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_technologies_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:gravity="start"
        android:padding="@dimen/for_header"
        android:text="@string/title_technologies"
        android:textSize="@dimen/default_headlines_text">

    </androidx.appcompat.widget.AppCompatTextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_technologies_expected_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:gravity="start"
            android:padding="@dimen/for_header"
            android:text="@string/title_expected"
            android:textSize="@dimen/for_list_header"
            android:textStyle="bold">

        </androidx.appcompat.widget.AppCompatTextView>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/technologies_expected_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:flexDirection="row"
            app:flexWrap="wrap"
            app:justifyContent="flex_start">

            <!-- При выпуске проекта, удалить элемент из разметке. он генерируется
             через код автоматически по количеству элементов в List с помощью FlexboxLayout-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/technologies_expected_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:background="@drawable/my_radius_light_blue_200"
                android:gravity="start"
                android:padding="@dimen/default_text_padding"
                android:text="@string/text_duties_employee"
                android:textSize="@dimen/default_text">

            </androidx.appcompat.widget.AppCompatTextView>
        </com.google.android.flexbox.FlexboxLayout>
    </LinearLayout>

    <View
        android:id="@+id/line_technologies_view"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_weight="0"
        android:background="@color/line_horizontal_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_technologies_optional_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:gravity="start"
            android:padding="@dimen/for_header"
            android:text="@string/title_optional"
            android:textSize="@dimen/for_list_header"
            android:textStyle="bold">

        </androidx.appcompat.widget.AppCompatTextView>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/technologies_optional_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:flexDirection="row"
            app:flexWrap="wrap"
            app:justifyContent="flex_start">

            <!-- При выпуске проекта, удалить элемент из разметке. он генерируется
             через код автоматически по количеству элементов в List с помощью FlexboxLayout-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/technologies_optional_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:background="@drawable/my_radius_light_gray_200"
                android:gravity="start"
                android:padding="@dimen/default_text_padding"
                android:text="@string/text_duties_employee"
                android:textSize="@dimen/default_text">

            </androidx.appcompat.widget.AppCompatTextView>
        </com.google.android.flexbox.FlexboxLayout>
    </LinearLayout>
</LinearLayout>